# digital-hall-pass

./: README.md  addTeacher.py  createQR.py  driveapi.py  main.py  pyproject.toml  requirements.txt  sheetsapi.py
.upm/: store.json
static/: style.css  template.csv
templates/: addTeacher.html  back.html  closed.html  email.html  home.html  id.html  invalid.html  login.html  logout.html  pass.html  passinfo.html  qr.html  sendapass.html  success.html  teacherError.html
