[tool.poetry]
name = "repl_python3_Flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
pymongo = "^4.1.1"
passlib = "^1.7.4"
co = "^0.2.0"
oauth2client = "^4.1.3"
pygsheets = "^2.0.5"
apiclient = "^1.0.4"
google-api-python-client = "^2.49.0"
qrcode = "^7.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
